src/snapshots/geometrid__polyomino__tests__L pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
    Vector8 {
        x: 0,
        y: -2,
    },
    Vector8 {
        x: 1,
        y: -2,
    },
    Vector8 {
        x: 1,
        y: 1,
    },
    Vector8 {
        x: 2,
        y: 1,
    },
    Vector8 {
        x: 2,
        y: 2,
    },
    Vector8 {
        x: 0,
        y: 2,
    },
]
