src/snapshots/geometrid__polyomino__tests__L pentomino rectangles.snap
---
source: src/polyomino.rs
expression: rectangles
---
[
    Rectangle {
        x: 0,
        y: 1,
        width: 2,
        height: 1,
    },
    Rectangle {
        x: 0,
        y: -2,
        width: 1,
        height: 3,
    },
]
