src/snapshots/geometrid__polyomino__tests__O tetromino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
    PointRelative8 {
        x: 0,
        y: -1,
    },
    PointRelative8 {
        x: 2,
        y: -1,
    },
    PointRelative8 {
        x: 2,
        y: 1,
    },
    PointRelative8 {
        x: 0,
        y: 1,
    },
]
