src/snapshots/geometrid__polyomino__tests__S pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
  {
    "x": 0,
    "y": 2
  },
  {
    "x": 1,
    "y": 2
  },
  {
    "x": 1,
    "y": 0
  },
  {
    "x": 3,
    "y": 0
  },
  {
    "x": 3,
    "y": 1
  },
  {
    "x": 2,
    "y": 1
  },
  {
    "x": 2,
    "y": 3
  },
  {
    "x": 0,
    "y": 3
  }
]
